--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,4 +5,12 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
+# Set the device name for Bluetooth
 CONFIG_BT_DEVICE_NAME="Nico Corne"
+
+# Enable calculating words per minute
+CONFIG_ZMK_WPM=y
+
+# Enable the power management module
+# Enable soft off functionality from the keymap or dedicated hardware
+CONFIG_ZMK_PM_SOFT_OFF=y
