--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,8 +9,8 @@
 CONFIG_BT_DEVICE_NAME="Nico Corne"
 
 # Enable calculating words per minute
-CONFIG_ZMK_WPM=y
+# CONFIG_ZMK_WPM=y
 
 # Enable the power management module
 # Enable soft off functionality from the keymap or dedicated hardware
-CONFIG_ZMK_PM_SOFT_OFF=y
+# CONFIG_ZMK_PM_SOFT_OFF=y
