✨🔧 Enable words per minute calculation
This commit enables the words per minute (WPM) calculation feature by setting `CONFIG_ZMK_WPM` to `y` in the `corne.conf` configuration file. This allows for tracking typing speed in the application.

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,7 +9,7 @@
 CONFIG_BT_DEVICE_NAME="Nico Corne"
 
 # Enable calculating words per minute
-# CONFIG_ZMK_WPM=y
+CONFIG_ZMK_WPM=y
 
 # Enable the power management module
 # Enable soft off functionality from the keymap or dedicated hardware
