✨🔧 Update config/corne.conf: Enable power management module and soft off functionality
The code changes in this commit update the configuration file `corne.conf`. The following significant changes were made:

- Enabled the power management module
- Enabled soft off functionality from the keymap or dedicated hardware

These changes ensure that the power management features are properly configured for the device.

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,9 +8,6 @@
 # Set the device name for Bluetooth
 CONFIG_BT_DEVICE_NAME="Nico Corne"
 
-# Enable calculating words per minute
-CONFIG_ZMK_WPM=y
-
 # Enable the power management module
 # Enable soft off functionality from the keymap or dedicated hardware
-# CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_PM_SOFT_OFF=y
