--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,6 +8,18 @@
 # Set the device name for Bluetooth
 CONFIG_BT_DEVICE_NAME="Nico Corne"
 
+# the keyboard disconnects from bluetooth.
+# uses very little power, but it may take
+# a few seconds to reconnect after waking.
+# 1.800.000 ms = 30 minutes
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
 # Enable the power management module
 # Enable soft off functionality from the keymap or dedicated hardware
 CONFIG_ZMK_PM_SOFT_OFF=y
+
+# enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+
+# Boost bluetooth transmit power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
